# dextool

./: .codecov.yml  .dscanner.ini  .dutyl.configFile  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DEVELOPER.md  INSTALL.md  LICENSE  README.md  TODO.md  USAGE.md  autobuild.d  autobuild.sh  autobuild_wip.sh  azure-pipelines.yml  build.sh  changelog.md  config.sh  dextool_clang.cmake  dextool_cpptooling.cmake  dextool_devtool.cmake  dextool_dextool.cmake  dextool_dsrcgen.cmake  dextool_libclang.cmake  dextool_llvm_d.cmake  dextool_llvm_hiwrap.cmake  dextool_unit_threaded.cmake  dub.json  dub.sdl  dub.selections.json  gen_version_from_git.sh  makefile  monitored.hpp  monitored.xml  news.md  travis.sh
dextool_clang_extensions/: CMakeLists.txt
dextool_clang_extensions/cpp_source/: binary_op.cpp  casestmt.cpp  ifstmt.cpp  libclang_interop.cpp  libclang_interop.hpp  mccabe.cpp
libs/cpptooling/: CMakeLists.txt  ut_main.d
libs/cpptooling/test/: CMakeLists.txt  clang_util.d  ut_main.d
libs/libclang/: CMakeLists.txt  README  README.md  dub.sdl  generate_libclang_bindings.sh
libs/libclang_ast/: CMakeLists.txt  README.md
libs/libclang_ast/tool/: dub.sdl
libs/mutantschemata/: CMakeLists.txt  README.md  report.sh
libs/mutantschemata/cpp_source/: api.cpp  api.hpp  cpp_string.cpp  cpp_string.hpp  rewrite.hpp  type.cpp  type.hpp
plugin/: CMakeLists.txt  README.md  dextool_plugin_utility.cmake  docopt_util.d  loader.d  register.d  types.d  utility.d
plugin/analyze/: CMakeLists.txt
plugin/analyze/cpp_clang_extension/: CMakeLists.txt
plugin/analyze/test/: integration.d
plugin/analyze/testdata/: function_in_namespace.cpp  function_nesting_if.c  function_simple.c  only_declarations.cpp  same_func_name_different_namespace.cpp  templates.cpp  test_class_methods.cpp  test_include_mccabe_counting.hpp  test_threshold.cpp
plugin/backend/: cppvariant.d  cvariant.d  plantuml.d
plugin/backend/cpptestdouble/: adapter.d  cppvariant.d
plugin/backend/ctestdouble/: adapter.d  cvariant.d  global.d
plugin/backend/graphml/: base.d  xml.d
plugin/compiledb/: CMakeLists.txt
plugin/compiledb/test/: integration.d
plugin/compiledb/testdata/: compile_db_v5.json  db1.json  db2.json  merge_old_new.json.ref
plugin/cpptestdouble/: CMakeLists.txt  README.md
plugin/cpptestdouble/doc/: design_test_double_of_inherit_hierarchy.md
plugin/cpptestdouble/test/: config.d  gtest_integration.d  integration.d  integration_main.d  stage_1.d  utility.d
plugin/ctestdouble/: CMakeLists.txt  README.md  ut_main.d
plugin/ctestdouble/test/: compilation_database_integratino.d  config.d  integration.d  integration_main.d  utility.d  xml_files.d
plugin/eqdetect/: CMakeLists.txt  README.md
plugin/example/: CMakeLists.txt
plugin/frontend/: cpptestdouble.d  ctestdouble.d  example.d  graphml.d  plantuml.d
plugin/fuzz/: CMakeLists.txt
plugin/fuzzer/: CMakeLists.txt  DESIGN.md  README.md
plugin/fuzzer/support/: afl_integration.cpp  afl_libfuzzer_driver.cpp  fuzz_helper.cpp  libfuzzer_driver.cpp  pcg_basic.c
plugin/fuzzer/test/: integration.d  ut_main.d
plugin/graphml/: CMakeLists.txt  ut_main.d
plugin/graphml/test/: integration.d
plugin/intercept/: CMakeLists.txt
plugin/intercept/test/: integration.d
plugin/mutate/: CMakeLists.txt  README.md  README_ci.md  README_config.md  README_embedded.md  README_mutation_operators.md  README_parallel.md  README_roadmap.md  README_tutorial.md  README_tutorial_autotools.md  README_tutorial_fmt.md  contributors.md  ut_main.d
plugin/mutate/data/: bootstrap.min.css  coverage_mmap.c  coverage_mmap.h  dashboard.css  dashboard.html  default.css  index.js  moment.min.js  schemata_header.c  schemata_header.h  score_history.js  source.css  source.html  source.js  table_on_click.js  treemap.js
plugin/mutate/doc/: .gitignore  README.md  abbrevations.md  appendix.md  default.latex  definitions.md  metadata.yaml  pandoc.d  references.bib  references.md
plugin/mutate/examples/: README.md
plugin/mutate/test/: config.d  fixtures.d  generate_mutant.d  integration_main.d  mutate_abs.d  mutate_aor.d  mutate_cor.d  mutate_cr.d  mutate_dcc.d  mutate_dcr.d  mutate_lcr.d  mutate_lcrb.d  mutate_memr.d  mutate_operators.d  mutate_ror.d  mutate_stmt_deletion.d  mutate_token.d  mutate_uoi.d  test_admin.d  test_analyzer.d  test_config.d  test_coverage.d  test_covmap.cpp  test_d2sqlite3_cleanup_bug.d  test_mutant_tester.d  test_report.d  test_schemata.d  test_schemata_c_header.cpp  utility.d
plugin/mutate/testdata/: all_binary_ops.cpp  all_kinds_of_abs_mutation_points.cpp  analyze_compile_error.cpp  analyze_dep.hpp  analyze_trans_dep.cpp  analyze_trans_dep.hpp  analyze_trans_dep2.hpp  aor.cpp  aor_object_overload.cpp  aor_primitive.cpp  aor_primitive_float.cpp  aor_primitive_modern_cpp.cpp  bug_test_inf_loop.cpp  complex_example.cpp  cr.cpp  cr_complex.cpp  cr_complex.hpp  cr_complex2.cpp  dcc_as_c_file.c  dcc_cc_ifstmt1.cpp  dcc_dc_ifstmt3.cpp  dcc_dc_stmt4.c  dcc_dc_switch1.cpp  dcc_dc_switch1.cpp.diff  dcr_bool_func.cpp  dcr_cc_ifstmt1.cpp  dcr_cc_ifstmt2.cpp  dcr_cc_ifstmt3.cpp  dcr_cc_ifstmt_bug.cpp  (+72 more)
plugin/register_plugin/: example.d  standard.d
plugin/source/: ut_main.d
plugin/uml/: CMakeLists.txt  ut_main.d
source/application/: CMakeLists.txt  app.d  app_main.d  cli_help.d  compilation_db.d  cpptestdouble.d  ctestdouble.d  logger.d  plugin.d  types.d  ut_main.d  utility.d
test/: .gitignore  CMakeLists.txt  LICENSE  README.md  c_tests.d  cpp_tests.d  cpp_tests.sh  cstub_tests.d  cstub_tests.sh  dextool_dextool_test.cmake  dextool_integration_test.cmake  dextool_scriptlike.cmake  dub.sdl  external_main.d  external_tests.sh  func_tests.sh  graphml_tests.d  integration_main.d  main1.cpp  plantuml_tests.d  profile_test.d  profile_test.sh  run_cstub_tests.sh  run_profile_test.sh  run_tests.sh  run_wip_tests.sh  unittest.sh  update_ut_main.sh  ut.d  ut_main.d  utils.d  wip_ut_main.d
test/scriptlike/: .gitignore  .travis.yml  LICENSE.txt  README.md  USAGE.md  dub.json  dub.sdl  makedocs  makedocs.bat  unittest  unittest.bat  version.txt
(+1465 files in other folders)
