# vim: filetype=cmake

include(dextool_plugin_utility.cmake)

add_subdirectory(analyze)
add_subdirectory(ctestdouble)
add_subdirectory(cpptestdouble)
add_subdirectory(compiledb)
add_subdirectory(intercept)
add_subdirectory(example)
add_subdirectory(graphml)
add_subdirectory(fuzzer)
add_subdirectory(uml)
add_subdirectory(mutate)
